<resources>
    <string name="app_name">Training journal</string>
    <string name="login_title" translatable="false">Your\nown\ngym</string>
    <string name="login_subtitle">Your favorite training plan is always with you</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="last_name">Last name</string>
    <string name="change_last_name">Change last name</string>
    <string name="change_first_name">Change first name</string>
    <string name="change_father_name">Change father name</string>
    <string name="first_name">First name</string>
    <string name="father_name">Father name</string>
    <string name="birthday"><u>Birthday</u></string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="login">Log in</string>
    <string name="confirm">Confirm</string>
    <string name="registration">Registration</string>
    <string name="not_exist_acc"><u>Don’t have an account?</u></string>
    <string name="add_workout">Add workout</string>
    <string name="action_add">Add element</string>
    <string name="share_exercise_template">Share exercise template</string>
    <string name="add_to_bookmarks">Add to bookmarks</string>
    <string name="choose_exercise_type">Choose exercise type</string>
    <string name="exercise_type">Exercise type</string>
    <string name="enter_exercise_name">Exercise name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="exercise_elements">Exercise elements</string>
    <string name="exercise">Exercise</string>
    <string name="parameter_name">Parameter name</string>
    <string name="value">Value</string>
    <string name="workout">Workout</string>
    <string name="settings">Settings</string>
    <string name="account_settings">Account settings</string>
    <string name="enter_workout_name">Workout name</string>
    <string name="active_exercise_name">Exercise</string>
    <string name="parameter_goal_dummy">34</string>
    <string name="parameter_text_dummy">parameter 1</string>
    <string name="button_text_dummy">Set 1/1</string>
    <string name="next_exercise_dummy">next exercise</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_bookmarks">Bookmarks</string>
    <string name="drawer_item_favourites">Favourites</string>
    <string name="drawer_item_search">Found training</string>
    <string name="image">Image</string>
    <string name="change_imnage">Change your personal image</string>
    <string name="remember">Remember</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="quit">Quit</string>
    <string name="quit_confirm_msg">Do you really want to log out of your account?</string>
    <string name="successfully">Successfully</string>
    <string name="user_exist">User already exist</string>
    <string name="failed_registr">Failed to register, please try again later.</string>
    <string name="failed_login">Failed to log in, please try again later.</string>
    <string name="failed_change_user_data">Failed to change data, please try again later.</string>
    <string name="incorrect_email">Incorrect email</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="incorrect_confirm_passowrd">Password don\'t match</string>
    <string name="incorrect_last_name">Incorrect last name</string>
    <string name="incorrect_first_name">Incorrect first name</string>
    <string name="incorrect_father_name">Incorrect father name</string>
    <string name="incorrect_email_or_password">Incorrect email or password.</string>
    <string name="cannot_login">Failed to log in.</string>
    <string name="cannot_sign_up">Failed to sign up.</string>
    <string name="server_not_available">Server is not available.</string>
    <string name="preference_account_settings_summary">Account settings</string>
    <string name="preference_account_settings">Account</string>
    <string name="preference_notification">Notifications</string>
    <string name="preference_delete_account">Delete account</string>
    <string name="preference_delete_account_summary">This account will be permanently deleted</string>
    <string name="preference_exit">Exit</string>
    <string name="preference_exit_summary">Exit from this account</string>
    <string name="preference_say_error">Report a bug</string>
    <string name="preference_say_error_summary">Please let us know about the error</string>
    <string name="preference_edit_first_name">First name</string>
    <string name="preference_edit_last_name">Last name</string>
    <string name="preference_edit_farther_name">Father name</string>
    <string name="preference_change_avatar">Photo</string>
    <string name="preference_change_avatar_summary">Change photo</string>
    <string name="preference_personal_data_category">Personal data</string>
    <string name="account_settings_key" translatable="false">account_settings_key</string>
    <string name="notifications_settings_key" translatable="false">notifications_settings_key</string>
    <string name="delete_acc_settings_key" translatable="false">delete_acc_settings_key</string>
    <string name="exit_settings_key" translatable="false">exit_settings_key</string>
    <string name="say_error_settings_key" translatable="false">say_error_settings_key</string>
    <string name="first_name_settings_key" translatable="false">first_name_settings_key</string>
    <string name="last_name_settings_key" translatable="false">last_name_settings_key</string>
    <string name="father_name_settings_key" translatable="false">father_name_settings_key</string>
    <string name="change_avatar_settings_key" translatable="false">father_name_settings_key</string>
    <string name="package_path" translatable="false">ru.ok.technopolis.training.personal</string>
    <string name="start_training_button_text">Start training</string>
    <string name="star_required" translatable="false">*</string>
    <string name="star_required_text"> - required fields</string>
    <string name="scheduled_workouts">Scheduled workouts</string>
    <string name="choose_time">Choose the time</string>
    <string name="time_example" translatable="false">12:00</string>
    <string name="day1">Su</string>
    <string name="day2">Mo</string>
    <string name="day3">Tu</string>
    <string name="day4">We</string>
    <string name="day5">Th</string>
    <string name="day6">Fr</string>
    <string name="day7">Sa</string>
    <string name="exercises_list">Exercises list</string>
    <string name="ok" translatable="false">OK</string>
    <string name="next_exercise">Next exercise</string>
    <string name="workout_progress">Workout progress</string>
    <string name="create_new">Create new</string>
    <string name="default_workout_name">Workout %d</string>
    <string name="drawer_item_results">Show results</string>
    <string name="choose_the_exercise">Choose the exercise</string>
    <string name="results">Results</string>
    <string name="drawer_item_calendar">Workouts calendar</string>
    <string name="workout_info_string">Workout info</string>
    <string name="workout_duration">Workout duration</string>
    <string name="start_workout">Start workout</string>
    <string name="start">Start</string>
    <string name="share_workout">Share workout</string>
    <string name="share">Share</string>
    <string name="share_public">Public access</string>
    <string name="choose_groups">Choose groups</string>
    <string name="choose_all">Select all</string>
    <string-array name="exercise_types">
        <item>Strength</item>
        <item>Cardio</item>
        <item>Coordinating</item>
        <item>Musculoskeletal</item>
    </string-array>
    <string-array name="workout_types">
        <item>Unspecified</item>
        <item>Aerobic</item>
        <item>Anaerobic</item>
        <item>Power</item>
        <item>Comprehensive</item>
        <item>Circular</item>
        <item>Interval</item>
        <item>Mixed</item>
        <item>Split</item>
        <item>Group</item>
        <item>Individual</item>
        <item>Gym</item>
    </string-array>
    <string-array name="sport_types">
        <item>Unspecified</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Baseball</item>
        <item>Box</item>
        <item>Volleyball</item>
        <item>Judo</item>
        <item>Karate</item>
        <item>Speed skating</item>
        <item>Athletics</item>
        <item>Cross-country skiing</item>
        <item>Table tennis</item>
        <item>Powerlifting</item>
        <item>Swimming</item>
        <item>Rugby</item>
        <item>Sambo</item>
        <item>Snowboarding</item>
        <item>Sports gymnastics</item>
        <item>Tennis</item>
        <item>Taekwondo</item>
        <item>Weightlifting</item>
        <item>Figure skating</item>
        <item>Fitness</item>
        <item>Football</item>
        <item>Freestyle</item>
        <item>Hockey</item>
    </string-array>
    <string-array name="exercise_elements_units">
        <item>mm</item>
        <item>cm</item>
        <item>inch</item>
        <item>m</item>
        <item>km</item>
        <item>mile</item>
    </string-array>
    <string-array name="exercise_elements_input_type">
        <item>target</item>
        <item>result</item>
        <item>stopwatch</item>
        <item>timer</item>
    </string-array>
    <string-array name="sign_up_user_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="levels_dummy">
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
        <item>Level 4</item>
        <item>Level 5</item>
        <item>Level 6</item>
        <item>Level 7</item>
        <item>Level 8</item>
        <item>Level 9</item>
        <item>Level 10</item>
    </string-array>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="navigation">Navigation</string>
    <string name="statistics">Statistics</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="training_switcher_text">Trainings</string>
    <string name="ex_switcher_text">Exercises</string>
    <string name="shared_ex_text">Shared exercises</string>
    <string name="shared_tr_text">Shared trainings</string>
    <string name="subscriptions_text">Subscriptions</string>
    <string name="subscribers_text">Subscribers</string>
    <string name="schedule_workout_button">Schedule workout button</string>
    <string name="workout_done">workout done</string>
    <string name="exercise_icon" translatable="false">Exercise icon</string>
    <string name="next">Next</string>
    <string name="workout_image">Workout image</string>
    <string name="workout_rank">Workout rank</string>
    <string name="workout_downloads">Workout downloads</string>
    <string name="all_filter_text">All</string>
    <string name="shared_filter_text">Shared</string>
    <string name="private_filter_text">Private</string>
    <string name="configure_superset">Configure superset</string>
    <string name="parameter_icon" translatable="false">Parameter icon</string>
    <string name="goal">Goal</string>
    <string name="evaluation_criteria">Evaluation criteria:</string>
    <string name="change_parameter">Change parameter</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="timer">Timer</string>
    <string name="show_in_short_description">Show in short description</string>
    <string name="delete_parameter" translatable="false">Delete parameter</string>
</resources>