<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_nav_item"
        android:icon="@drawable/ic_outline_explore_24"
        android:checkable="true"
        android:enabled="true"
        android:title="@string/navigation"
        />
    <item
        android:id="@+id/nav_stat_item"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:checkable="true"
        android:enabled="true"
        android:title="@string/statistics"
        />
    <item
        android:id="@+id/nav_home_item"
        android:icon="@drawable/ic_outline_home_24"
        android:checkable="true"
        android:enabled="true"
        android:title="@string/home"
        />
    <item
        android:id="@+id/nav_message_item"
        android:icon="@drawable/ic_outline_chat_bubble_outline_24"
        android:checkable="true"
        android:enabled="true"
        android:title="@string/messages"
        />
    <item
        android:id="@+id/nav_profile_item"
        android:icon="@drawable/ic_outline_account_circle_24"
        android:checkable="true"
        android:enabled="true"
        android:title="@string/profile"
        />
</menu>