<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/addExerciseTopPanel"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:text="@string/share_exercise_template"
            style="@style/TextViewExercise.Action" />
        <TextView
            android:text="@string/add_to_bookmarks"
            style="@style/TextViewExercise.Action" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exerciseNamePanel"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="@dimen/dimens_8dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/addExerciseTopPanel"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            style="@style/Input"
            android:hint="@string/enter_exercise_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exerciseTypePanel"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/exerciseNamePanel"
        >

        <TextView
            android:text="@string/exercise_type"
            style="@style/TextViewExercise"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimens_16dp"
            />
        <Spinner
            android:id="@+id/addExerciseBackButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/exercise_types"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/addExerciseItemsPanel"
        android:orientation="horizontal"
        android:layoutDirection="rtl"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/exerciseTypePanel"
        >

        <ImageButton
            android:id="@+id/addExerciseAddItemButton"
            android:layout_width="64dp"
            android:layout_height="match_parent"

            android:src="@drawable/ic_add_black_24dp"

            />

        <TextView
            android:text="@string/exercise_elements"
            android:layout_width="match_parent"
            style="@style/TextViewExercise"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimens_16dp"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/addExerciseItemsPanel"
        app:layout_constraintBottom_toTopOf="@id/addExerciseFooterActions"
        />

    <LinearLayout
        android:id="@+id/addExerciseFooterActions"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <Button
            android:id="@+id/addExerciseCancelButton"
            android:text="@string/cancel"
            style="@style/TextViewExercise"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimens_16dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/addExerciseSaveButton"
            android:text="@string/save"
            style="@style/TextViewExercise"
            android:layout_marginStart="@dimen/dimens_16dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>