<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/fragment_workout__title"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/exercise"

        app:layout_constraintTop_toTopOf="parent"

        />

    <EditText
        android:id="@+id/fragment_workout__workout_name"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:inputType="text"
        style="@style/Input"
        app:layout_constraintTop_toBottomOf="@id/fragment_workout__title"
        android:hint="@string/enter_exercise_name" />

    <TextView
        android:id="@+id/exerciseTypeTextView"
        android:text="@string/exercise_type"
        android:layout_height="64dp"
        android:layout_width="0dp"
        style="@style/TextViewExercise"
        app:layout_constraintTop_toBottomOf="@id/fragment_workout__workout_name"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:paddingEnd="@dimen/dimens_16dp"
        android:paddingStart="@dimen/dimens_16dp"
        />
    <Spinner
        android:id="@+id/addExerciseBackButton"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:entries="@array/exercise_types"
        app:layout_constraintTop_toTopOf="@id/exerciseTypeTextView"
        app:layout_constraintBottom_toBottomOf="@id/exerciseTypeTextView"
        app:layout_constraintStart_toEndOf="@id/exerciseTypeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/fragment_workout__add_exercise_text"
        android:text="@string/exercise_elements"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        style="@style/TextViewExercise"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/exerciseTypeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fragment_workout__add_exercise_button"
        />

    <ImageButton
        android:id="@+id/fragment_workout__add_exercise_button"
        android:layout_width="64dp"
        android:layout_height="0dp"

        android:src="@drawable/ic_add_black_24dp"
        app:layout_constraintTop_toTopOf="@id/fragment_workout__add_exercise_text"
        app:layout_constraintBottom_toBottomOf="@id/fragment_workout__add_exercise_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_workout__add_exercise_text"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_workout__elements_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_workout__add_exercise_text"
        app:layout_constraintBottom_toTopOf="@id/fragment_workout__cancel"
        />

    <Button
        android:id="@+id/fragment_workout__cancel"
        android:text="@string/cancel"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        style="@style/TextViewExercise"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fragment_workout__save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="1"
        android:layout_margin="@dimen/dimens_8dp"
        />
    <Button
        android:id="@+id/fragment_workout__save"
        android:text="@string/save"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        style="@style/TextViewExercise"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_workout__cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:layout_margin="@dimen/dimens_8dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>