<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimens_92dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/dimens_16dp"
    android:background="@drawable/border">

    <ImageView
        android:id="@+id/shop_workout_icon"
        android:layout_width="@dimen/dimens_24dp"
        android:layout_height="@dimen/dimens_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/shop_workout_name"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dimens_8dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="0dp"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:contentDescription="@string/workout_info_string" />
    <TextView
        android:id="@+id/shop_workout_name"
        android:layout_height="0dp"
        android:layout_width="0dp"
        tools:text="Название тренировки"
        android:textSize="@dimen/text_size_15"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="@id/shop_workout_icon"
        app:layout_constraintStart_toEndOf="@id/shop_workout_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/shop_workout_icon"
        android:layout_marginEnd="@dimen/dimens_8dp"
        />
    <ImageView
        android:id="@+id/shop_workout_duration_icon"
        android:layout_width="@dimen/dimens_24dp"
        android:layout_height="@dimen/dimens_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_alarm_black_24dp"
        android:layout_margin="@dimen/dimens_8dp"
        android:contentDescription="@string/workout_duration" />
    <TextView
        android:id="@+id/shop_workout_duration"
        android:layout_height="0dp"
        android:layout_width="0dp"
        tools:text="Длительность"
        android:textSize="@dimen/text_size_13"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="@id/shop_workout_duration_icon"
        app:layout_constraintStart_toEndOf="@id/shop_workout_duration_icon"
        app:layout_constraintEnd_toStartOf="@id/shop_workout_start"
        app:layout_constraintBottom_toBottomOf="@id/shop_workout_duration_icon"
        android:layout_marginEnd="@dimen/dimens_8dp"
        />
    <ImageView
        android:id="@+id/shop_workout_start_icon"
        android:layout_height="@dimen/dimens_32dp"
        android:layout_width="@dimen/dimens_32dp"
        android:src="@drawable/ic_directions_run_black_24dp"
        app:layout_constraintEnd_toEndOf="@id/shop_workout_start"
        app:layout_constraintBottom_toTopOf="@id/shop_workout_start"
        app:layout_constraintStart_toStartOf="@id/shop_workout_start"
        android:contentDescription="@string/start_workout" />
    <TextView
        android:id="@+id/shop_workout_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_9"
        android:text="@string/start"
        android:gravity="bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/dimens_8dp"
        />
    <ImageView
        android:id="@+id/shop_workout_share_icon"
        android:layout_height="@dimen/dimens_32dp"
        android:layout_width="@dimen/dimens_32dp"
        android:src="@drawable/ic_reply_black_24dp"
        app:layout_constraintEnd_toEndOf="@id/shop_workout_share"
        app:layout_constraintBottom_toTopOf="@id/shop_workout_share"
        app:layout_constraintStart_toStartOf="@id/shop_workout_share"
        android:contentDescription="@string/share_workout"
        android:scaleX="-1"/>
    <TextView
        android:id="@+id/shop_workout_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_9"
        android:text="@string/share"
        android:gravity="bottom"
        app:layout_constraintEnd_toStartOf="@id/shop_workout_start"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/dimens_8dp"
        android:paddingEnd="@dimen/dimens_8dp"
        android:paddingStart="@dimen/dimens_8dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>